# low-effort-task-based-intermittent-computing

./: Dockerfile  README.md  container-setup.sh  setup.sh
InK/legacy-gcc/benchmarks/: CMakeLists.txt  bitcount_as.S  build.sh  run.sh
InK/legacy-gcc/benchmarks/ar_eval/: divmodhi3.c  mult.c  sqrt.c  thread1.c
InK/legacy-gcc/benchmarks/bitcount_eval/: CMakeLists.txt  thread1.c
InK/legacy-gcc/benchmarks/cem_eval/: CMakeLists.txt  thread1.c
InK/legacy-gcc/benchmarks/cm_accel_sound/cm_acc/: adxl345_i2c_lib.c  app.h  app_intrinsics.c  appinit.c
InK/legacy-gcc/benchmarks/cuckoo_eval/: thread1.c
InK/legacy-gcc/benchmarks/dijkstra_eval/: CMakeLists.txt  appinit.c  main.c
InK/legacy-gcc/benchmarks/fft_eval/: CMakeLists.txt  data_256.h  main.c
InK/legacy-gcc/benchmarks/fft_eval/dsplib/include/: DSPLib.h  DSPLib_filter.h  DSPLib_vector.h
InK/legacy-gcc/benchmarks/fft_eval/dsplib/source/filter/: msp_biquad_cascade_df2_ext_q15.c  msp_fir_iq31.c
InK/legacy-gcc/benchmarks/fft_eval/dsplib/source/lea/: msp_lea_init.c  msp_lea_patch.c
InK/legacy-gcc/benchmarks/fft_eval/dsplib/source/matrix/: msp_matrix_mpy_iq31.c  msp_matrix_scale_q15.c
InK/legacy-gcc/benchmarks/fft_eval/dsplib/source/transform/: msp_cmplx_fft_fixed_q15.c  msp_cmplx_ifft_auto_q15.c
InK/legacy-gcc/benchmarks/fft_eval/dsplib/source/utility/: msp_interleave_iq31.c
InK/legacy-gcc/benchmarks/fft_eval/dsplib/source/vector/: msp_cmplx_conj_q15.c  msp_cmplx_mpy_q15.c  (+5 more)
InK/legacy-gcc/benchmarks/powercast_ar/: adxl345_i2c_lib.c  adxl345_i2c_lib.h  app_intrinsics.c  app_intrinsics.h  appinit.c  interrupts.c  interrupts.h  thread1.c  thread2.c  thread3.c  thread4.c
InK/legacy-gcc/benchmarks/powercast_ar/dsplib/include/: DSPLib_matrix.h
InK/legacy-gcc/benchmarks/rsa_eval/: main.c  sqrt.c
InK/legacy-gcc/benchmarks/sound_fft/: app.h  appinit.c  thread1.c
InK/legacy-gcc/benchmarks/sound_fft/dsplib/include/: DSPLib_support.h  DSPLib_transform.h  DSPLib_utility.h
InK/legacy-gcc/kernel/: CMakeLists.txt  build.sh
InK/legacy-gcc/kernel/mcu/msp430/: dma.c  fram.h
InK/legacy-gcc/kernel/scheduler/: scheduler.c  scheduler.h  thread.c
InK/legacy-gcc/kernel/timer/: timer.c
InK/legacy-gcc/kernel/timer/persistent_timer_commit/: persistent_timer.c
InK/new/benchmarks/: .gitignore  CMakeLists.txt  README.md  benchmark_helpers.h  bitcount_as.S  build.sh  measurement_pins.txt
InK/new/benchmarks/ar_eval/: CMakeLists.txt  divmodhi3.c  main.c  msp-math.h  mult.c  sqrt.c  thread1.c
InK/new/benchmarks/as/: ar_eval.S  ar_eval_source.S  bitcount_eval.S  bitcount_eval_source.S  blink.S  blink_source.S  cem_eval.S  cem_eval_source.S  cuckoo_eval.S  cuckoo_eval_source.S  dijkstra_eval.S  dijkstra_eval_source.S  fft_eval.S  fft_eval_source.S  rsa_eval.S  rsa_eval_source.S  sort_eval.S  sort_eval_source.S  thread_backup_test.S  thread_backup_test_source.S
InK/new/benchmarks/bitcount_eval/: CMakeLists.txt  thread1.c
InK/new/benchmarks/blink/: CMakeLists.txt  main.c  thread.c  thread1.c  thread_instrumented.c
InK/new/benchmarks/cem_eval/: CMakeLists.txt  main.c  thread1.c
InK/new/benchmarks/cm_accel_sound/cm_acc/: app_intrinsics.c  thread1.c
InK/new/benchmarks/cuckoo_eval/: CMakeLists.txt  main.c  thread1.c
InK/new/benchmarks/dijkstra_eval/: CMakeLists.txt  data.h  main.c
InK/new/benchmarks/fft_eval/: CMakeLists.txt  data_128.h  data_256.h  main.c
InK/new/benchmarks/fft_eval/dsplib/include/: DSPLib.h  DSPLib_filter.h  DSPLib_lea.h  DSPLib_matrix.h  DSPLib_support.h  DSPLib_transform.h  DSPLib_types.h  DSPLib_utility.h  DSPLib_vector.h
InK/new/benchmarks/powercast_ar/dsplib/include/: DSPLib_support.h
InK/new/benchmarks/rsa_eval/: CMakeLists.txt  main.c  msp-math.h  sqrt.c
InK/new/benchmarks/sort_eval/: CMakeLists.txt  main.c
InK/new/benchmarks/sound_fft/: CMakeLists.txt  app.h  main.c  thread1.c
InK/new/benchmarks/thread_backup_test/: CMakeLists.txt  main.c  thread1.c  thread2.c  thread3.c
InK/new/instrumentation/: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh  out.c  run.sh
InK/new/instrumentation/src/: function_labeling.cpp  pointer_instrumentation.cpp  pointer_instrumentation_dereference.cpp  pointer_instrumentation_members.cpp  pointer_instrumentation_members_bak.cpp  utils.cpp  utils.hpp  variable_instrumentation.cpp
InK/new/instrumentation/tests/: run_tests.sh  test.c  test_macros.c
InK/new/instrumentation/tests/globals/: anonymous_structs.c  array_indexing.c  local_pointers.c  out.c  simple_operations.c  test.c
InK/new/instrumentation/tests/tasks/: tasks.c
InK/new/instrumentation/tests/uninstrumented/: arrays.c  local_pointers.c  nothing.c  out.c  shared_pointers.c  shared_variables.c  shared_variables_declaration_definition.c  shared_variables_extern.c  shared_variables_header.c  shared_variables_header.h  shared_variables_indirect.c  shared_variables_macro.c  shared_variables_outside_tasks.c  shared_variables_read_only.c  simple_operations.c  static_and_shared_variables.c  structs.c  tasks.c  tasks_extern.c  tasks_header.c  tasks_header.h  tasks_multiple_threads.c  tasks_return_illegal.c  tasks_return_null.c
InK/new/instrumentation/tics/: memlog.cpp
InK/new/kernel/: .gitignore  CMakeLists.txt  build.sh
InK/new/kernel/api/: address_translation.c  events.c  init.c  scheduler.c  thread.c  timer.c
InK/new/kernel/api/include/: address_translation.h  events.h  init.h  ink.h  scheduler.h  thread.h  timer.h
InK/new/kernel/channel/: channel.h
InK/new/kernel/isr/: isr.h  isrmanager.c  isrmanager.h  persistentqueue.c  persistentqueue.h
InK/new/kernel/linker/: ink_template.ld
InK/new/kernel/mcu/: mcu.h
InK/new/kernel/mcu/msp430/: fram.c  fram.h  msp430fr5969.h
InK/new/kernel/scheduler/: priority.c  priority.h  scheduler.c  scheduler.h  task.h  thread.c  thread.h
InK/new/kernel/timer/: timer.c  timer.h
InK/new/kernel/timer/mcu_specifics/: clk.c  clk.h
InK/new/kernel/timer/persistent_timer_commit/: persistent_timer.c  persistent_timer.h
devices/msp430/driverlib/MSP430FR5xx_6xx/: CMakeLists.txt
devices/msp430/driverlib/MSP430FR5xx_6xx/inc/: hw_memmap.h
(+958 files in other folders)
